Fixing the car endpoint to get the accessories set properly.